objects/UNITYPM_Work_Order_Assets_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>UNITYPM_Work_Order_Assets_junctions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipName>UNITYPM_Work_Order_Assets_junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Work_Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Work Plan</label>
        <referenceTo>FSO__WorkPlan__c</referenceTo>
        <relationshipName>UNITYPM_Work_Order_Assets_junctions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Work Order Assets Junction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Work Order Assets Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work_Order_Assets_Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>